--- a/quiz_game.css
+++ b/quiz_game.css
@@ -7,5 +7,19 @@ body {
 }
 input {
     color: brown;
-    border-radius: 20px;
+    border-radius: 15px;
+    width: 700px;
+    height: 40px;
+}
+#output {
+    background: white;
+    border-radius: 10px;
+    border-top: 10px solid #AA4465;
+    padding: 10px;
+    float: none;
+    text-align: left;
+}
+/*button {
+    font-size: larger;
+    font-weight: bold;
 }
