--- a/quiz_game.css
+++ b/quiz_game.css
@@ -5,7 +5,7 @@
 body {
     background: linear-gradient(to right, rgb(250, 107, 131), yellow);
 }
-input {
+.style {
     color: brown;
     border-radius: 15px;
     width: 700px;
